Add dropdown-date block with air-datepicker jQuery plugin

--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -14,6 +14,7 @@ block mixins
   include ../../blocks/list-radio/list-radio.pug
   include ../../blocks/pagination/pagination.pug
   include ../../blocks/dropdown-list/dropdown-list.pug
+  include ../../blocks/dropdown-date/dropdown-date.pug
 
 doctype html
 html(lang="en")
