--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -25,3 +25,4 @@
 @import '../blocks/list-radio/list-radio';
 @import '../blocks/pagination/pagination';
 @import '../blocks/dropdown-list/dropdown-list';
+@import '../blocks/dropdown-date/dropdown-date';
