--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -15,6 +15,34 @@ block content
         .form-elements__text-field
           +input-field({inpType: "mask-date", labelText: "Masked Text Field"})
         .form-elements__text-field
+          +dropdown-list({
+          withButtons: true,
+          labelText: "Dropdown",
+          inpPlaceholder: "Сколько гостей",
+          inpName: "guests",
+          listItems: [
+            {combined: true, title: "взрослые", names: ["гость", "гостя", "гостей"], value: 0, minValue: 0, maxValue: 10},
+            {combined: true, title: "дети", names: ["гость", "гостя", "гостей"], value: 0, minValue: 0, maxValue: 10},
+            {title: "младенцы", names: ["младенец", "младенца", "младенцев"], value: 0, minValue: 0, maxValue: 10}
+          ],
+        })
+
+      .form-elements__item
+        .form-elements__text-field
+          +dropdown-date({
+            labelTexts: ["Date Dropdown"],
+            inpNames: ["date-arrival", "date-departure"],
+          })
+
+      .form-elements__item
+        .form-elements__text-field
+          +dropdown-date({
+            labelTexts: ["Filter Date Dropdown"],
+            inpNames: ["date-range"],
+          })
+
+      .form-elements__item
+        .form-elements__text-field
           +subscription({labelText: "Subscription Text Field"})
 
     .form-elements__column.form-elements__column_shifted
