--- a/source/blocks/dropdown-list/dropdown-list.scss
+++ b/source/blocks/dropdown-list/dropdown-list.scss
@@ -2,15 +2,6 @@
   position: relative;
   max-width: 26.6rem;
 
-  &__label {
-    display: inline-block;
-    margin-bottom: 0.5rem;
-    font-family: $font-family_h3;
-    font-weight: bold;
-    font-size: $font-size_h3;
-    text-transform: uppercase;
-  }
-
   &__input {
     position: relative;
     cursor: pointer;
@@ -38,9 +29,10 @@
   &__icon {
     position: absolute;
     right: 1rem;
-    top: 1rem;
+    bottom: 1rem;
     color: $color_main-50;
     user-select: none;
+    pointer-events: none;
     transition: transform 0.3s ease-in-out;
 
     &_active {
@@ -102,7 +94,10 @@
     outline: none;
     cursor: pointer;
 
-    &:focus,
+    &:focus {
+      box-shadow: 0 0 0.5rem $color_main-25;
+    }
+
     &:hover {
       border-color: $color_main-50;
     }
