--- a/source/blocks/list-checkbox/list-checkbox.scss
+++ b/source/blocks/list-checkbox/list-checkbox.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    outline: none;
   }
 
   &__header:hover &__icon {
