Add slider-range block with ion-rangeslider jQuery plugin

--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -15,6 +15,7 @@ block mixins
   include ../../blocks/pagination/pagination.pug
   include ../../blocks/dropdown-list/dropdown-list.pug
   include ../../blocks/dropdown-date/dropdown-date.pug
+  include ../../blocks/slider-range/slider-range.pug
 
 doctype html
 html(lang="en")
