--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -26,3 +26,4 @@
 @import '../blocks/pagination/pagination';
 @import '../blocks/dropdown-list/dropdown-list';
 @import '../blocks/dropdown-date/dropdown-date';
+@import '../blocks/slider-range/slider-range';
