--- a/source/blocks/dropdown-list/dropdown-list.scss
+++ b/source/blocks/dropdown-list/dropdown-list.scss
@@ -44,7 +44,7 @@
     position: absolute;
     z-index: 1;
     width: 100%;
-    padding: 0 0.7rem 0 1.5rem;
+    padding: 0 0.7rem 0 1.4rem;
     background: $color_back;
     border: 0.1rem solid $color_main-50;
     border-top: 0;
@@ -57,7 +57,7 @@
     transition: all 0.3s ease-in-out;
 
     &_active {
-      padding-top: 0.7rem;
+      padding-top: 0.6rem;
       visibility: visible;
       opacity: 1;
       transform: scaleY(1);
@@ -79,6 +79,11 @@
     font-size: $font-size_h3;
     text-transform: uppercase;
     transition: all 0.3s ease-in-out;
+  }
+
+  &__item-controls {
+    display: flex;
+    align-items: center;
   }
 
   &__item-btn {
@@ -112,13 +117,15 @@
   &__item-counter {
     display: inline-block;
     width: 3rem;
+    height: 3rem;
     text-align: center;
+    line-height: 3rem;
   }
 
   &__buttons {
     display: flex;
     justify-content: space-between;
-    margin-top: 1.2rem;
+    margin-top: 2rem;
     margin-bottom: 1.2rem;
   }
 
