--- a/source/pages/ui-kit/form-elements.scss
+++ b/source/pages/ui-kit/form-elements.scss
@@ -6,16 +6,20 @@
   width: 100%;
   max-width: 1440px;
   max-height: 1853px;
-  padding: 140px;
+  padding: 14.5rem 14.1rem 14rem 14rem;
   background: url('../pages/ui-kit/img/ui-kit__logo.svg') no-repeat 30px 30px;
   background-size: 4.8rem 4.8rem;
 
   &__column {
     width: 320px;
-    min-height: 380px;
+    min-height: 315px;
 
-    &_shifted {
-      margin-left: 5rem;
+    &_shifted-right {
+      margin-left: 5.4rem;
+    }
+
+    &_shifted-down {
+      margin-top: 0.6rem;
     }
 
     &_wide {
@@ -24,8 +28,7 @@
   }
 
   &__item {
-    width: 100%;
-    margin-bottom: 4rem;
+    margin-bottom: 4.4rem;
   }
 
   &__title {
@@ -37,15 +40,24 @@
   }
 
   &__text-field {
-    margin-bottom: 2rem;
+    margin-bottom: 2.4rem;
+  }
+
+  &__subscription {
+    margin-bottom: 10.2rem;
   }
 
   &__checkbox-list {
     width: 222px;
+    margin-bottom: 4rem;
 
     &_wide {
       width: 260px;
     }
+  }
+
+  &__toggle-group {
+    margin-bottom: 4.7rem;
   }
 
   &__toggle {
@@ -62,6 +74,12 @@
     margin-right: 2rem;
   }
 
+  &__slider {
+    width: 26.5rem;
+    margin-top: 0.1rem;
+    margin-bottom: 4.1rem;
+  }
+
   &__button {
     height: 44px;
     margin-bottom: 3rem;
@@ -73,11 +91,22 @@
     &_inline {
       display: inline-block;
       margin-right: 2rem;
-      margin-bottom: 0;
+      margin-bottom: 0.2rem;
     }
   }
 
   &__pagination {
     display: flex;
+    margin-top: -0.1rem;
+    margin-left: 0.1rem;
+  }
+
+  &__bullet-list {
+    width: 260px;
+  }
+
+  &__comment {
+    margin-top: 1rem;
+    margin-left: -0.1rem;
   }
 }
