Add blocks: card-search, card-signup, card-signin
Also fix a bug in dropdown-list block and improve input-field and
list-radio blocks for PerfectPixel.

--- a/source/blocks/dropdown-list/dropdown-list.pug
+++ b/source/blocks/dropdown-list/dropdown-list.pug
@@ -33,9 +33,9 @@ mixin dropdown-list({ listItems=[], labelText, inpName, inpPlaceholder, withButt
         )
           span(class=`${blockName}__item-name`) #{item.title}
           span(class=`${blockName}__item-controls`)
-            button(class=itemBtnClass) -
+            button(class=itemBtnClass, type='button') -
             span(class=itemCounterClass) #{item.value}
-            button(class=itemBtnClass) +
+            button(class=itemBtnClass, type='button') +
       if (withButtons)
         div(class=`${blockName}__buttons`)
           div(class=resetBtnClass)
