--- a/source/blocks/input-field/input-field.scss
+++ b/source/blocks/input-field/input-field.scss
@@ -5,7 +5,6 @@
   align-items: flex-start;
   justify-content: center;
   max-width: 32rem;
-  min-width: 15rem;
 
   &__label {
     display: inline-block;
@@ -13,6 +12,7 @@
     font-family: $font-family_h3;
     font-weight: bold;
     font-size: $font-size_h3;
+    line-height: 1.5rem;
     text-transform: uppercase;
   }
 
