--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -18,6 +18,7 @@
 @import '../blocks/subscription/subscription';
 @import '../blocks/button/button';
 @import '../blocks/button-like/button-like';
+@import '../blocks/button-info/button-info';
 @import '../blocks/rating/rating';
 @import '../blocks/comment/comment';
 @import '../blocks/list-bullet/list-bullet';
@@ -32,3 +33,4 @@
 @import '../blocks/card-search/card-search';
 @import '../blocks/card-signup/card-signup';
 @import '../blocks/card-signin/card-signin';
+@import '../blocks/card-book/card-book';
