--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -34,3 +34,4 @@
 @import '../blocks/card-signup/card-signup';
 @import '../blocks/card-signin/card-signin';
 @import '../blocks/card-book/card-book';
+@import '../blocks/card-room/card-room';
