Add card-calendar block and finish Cards page
Also do minor fixing and refactoring of other card blocks
for PerfectPixel.

--- a/source/blocks/card-book/card-book.pug
+++ b/source/blocks/card-book/card-book.pug
@@ -41,7 +41,7 @@ mixin card-book({ roomNumber=0, roomIsLuxury=false, roomPrice=0, discountPrice=0
       div(class=formItemClass, data-required=true)
         +dropdown-list({
           withButtons: true,
-          labelText: 'Dropdown',
+          labelText: 'Гости',
           inpPlaceholder: 'Сколько гостей',
           inpName: 'guests',
           listItems: [
