--- a/source/blocks/card-calendar/card-calendar.scss
+++ b/source/blocks/card-calendar/card-calendar.scss
@@ -1,56 +1,4 @@
-@import 'node_modules/air-datepicker/dist/css/datepicker';
-
-.dropdown-date {
-  width: 100%;
-
-  &__inputs {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__input {
-    position: relative;
-    flex: 1;
-    max-width: 26.7rem;
-    cursor: pointer;
-
-    &:hover input {
-      border-color: $color_main-50;
-    }
-
-    input {
-      padding-right: 4.5rem;
-      text-overflow: ellipsis;
-      cursor: pointer;
-    }
-
-    &_active input {
-      border-color: $color_main-50;
-    }
-
-    &_small {
-      max-width: 15rem;
-    }
-  }
-
-  &__input:hover &__icon {
-    color: $color_main-75;
-  }
-
-  &__icon {
-    position: absolute;
-    right: 1rem;
-    bottom: 1rem;
-    color: $color_main-50;
-    user-select: none;
-    pointer-events: none;
-    transition: transform 0.3s ease-in-out;
-
-    &_active {
-      transform: rotate(-180deg);
-    }
-  }
-
+.card-calendar {
   &__datepicker.datepicker {
     box-sizing: border-box;
     width: 32rem;
