--- a/source/blocks/card-signup/card-signup.scss
+++ b/source/blocks/card-signup/card-signup.scss
@@ -27,8 +27,9 @@
   }
 
   &__form-button {
-    height: 4.4rem;
+    height: 4.7rem;
     margin-bottom: 3rem;
+    padding-top: 0.3rem;
   }
 
   &__footer {
