--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -35,3 +35,4 @@
 @import '../blocks/card-signin/card-signin';
 @import '../blocks/card-book/card-book';
 @import '../blocks/card-room/card-room';
+@import '../blocks/card-calendar/card-calendar';
