--- a/source/blocks/input-radio/input-radio.pug
+++ b/source/blocks/input-radio/input-radio.pug
@@ -12,5 +12,5 @@ mixin input-radio({ labelText='', addAttributes })
   label(class=wrapperClass)
     input&attributes(attributes)
     span(class=`${blockName}__text`) #{labelText}
-    div(class=`${blockName}__box`)
-      div(class=`${blockName}__mark`)
+    span(class=`${blockName}__box`)
+      span(class=`${blockName}__mark`)
