--- a/source/blocks/input-toggle/input-toggle.pug
+++ b/source/blocks/input-toggle/input-toggle.pug
@@ -7,5 +7,5 @@ mixin input-toggle({ labelText='' })
 
   label(class=wrapperClass) #{labelText}
     input&attributes(attributes)
-    div(class=`${blockName}__box`)
-      div(class=`${blockName}__mark`)
+    span(class=`${blockName}__box`)
+      span(class=`${blockName}__mark`)
