--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -1,7 +1,7 @@
 extends ./_layout.pug
 
 block append variables
-  - const pageTitle = "Form Elements"
+  - const pageTitle = 'Form Elements'
 
 block content
 
@@ -9,71 +9,71 @@ block content
     .form-elements__column
       .form-elements__item
         .form-elements__text-field
-          +input-field({inpType: "email", labelText: "Text field"})
+          +input-field({inpType: 'email', labelText: 'Text field'})
         .form-elements__text-field
-          +input-field({labelText: "Text field"})(value="This is pretty awesome")
+          +input-field({labelText: 'Text field'})(value='This is pretty awesome')
         .form-elements__text-field
           +dropdown-list({
             withButtons: true,
-            labelText: "Dropdown",
-            inpPlaceholder: "Сколько гостей",
-            inpName: "guests",
+            labelText: 'Dropdown',
+            inpPlaceholder: 'Сколько гостей',
+            inpName: 'guests',
             listItems: [
-              {combined: true, title: "взрослые", names: ["гость", "гостя", "гостей"], value: 0, minValue: 0, maxValue: 10},
-              {combined: true, title: "дети", names: ["гость", "гостя", "гостей"], value: 0, minValue: 0, maxValue: 10},
-              {title: "младенцы", names: ["младенец", "младенца", "младенцев"], value: 0, minValue: 0, maxValue: 10}
+              {combined: true, title: 'взрослые', names: ['гость', 'гостя', 'гостей'], value: 0, minValue: 0, maxValue: 10},
+              {combined: true, title: 'дети', names: ['гость', 'гостя', 'гостей'], value: 0, minValue: 0, maxValue: 10},
+              {title: 'младенцы', names: ['младенец', 'младенца', 'младенцев'], value: 0, minValue: 0, maxValue: 10}
             ],
           })
         .form-elements__text-field
-          +input-field({inpType: "mask-date", labelText: "Masked Text Field"})
+          +input-field({inpType: 'mask-date', labelText: 'Masked Text Field'})
 
       .form-elements__item
         .form-elements__text-field
           +dropdown-date({
-            labelTexts: ["Date Dropdown"],
-            inpNames: ["date-arrival", "date-departure"],
+            labelTexts: ['Date Dropdown'],
+            inpNames: ['date-arrival', 'date-departure'],
           })
 
       .form-elements__item
         .form-elements__text-field
           +dropdown-date({
-            labelTexts: ["Filter Date Dropdown"],
-            inpNames: ["date-range"],
-            startAt: "2019, 8, 19",
-            endAt: "2019, 8, 23",
+            labelTexts: ['Filter Date Dropdown'],
+            inpNames: ['date-range'],
+            startAt: '2019, 8, 19',
+            endAt: '2019, 8, 23',
           })
 
       .form-elements__item
         .form-elements__subscription
-          +subscription({labelText: "Subscription Text Field"})
+          +subscription({labelText: 'Subscription Text Field'})
 
     .form-elements__column.form-elements__column_shifted-right
       .form-elements__checkbox-list
         +list-checkbox({
-          listTitle: "Checkbox Buttons",
+          listTitle: 'Checkbox Buttons',
           listItems: [
-            {labelText: "Можно курить"},
-            {labelText: "Можно с питомцами", addAttributes: {checked: true, name: "test"}},
-            {labelText: "Можно пригласить гостей (до 10 человек)", addAttributes: {checked: true}}
+            {labelText: 'Можно курить'},
+            {labelText: 'Можно с питомцами', addAttributes: {checked: true, name: 'test'}},
+            {labelText: 'Можно пригласить гостей (до 10 человек)', addAttributes: {checked: true}}
           ]
         })
 
       .form-elements__item
         +list-radio({
-          radioName: "sex",
-          listTitle: "Radio Buttons",
+          radioName: 'sex',
+          listTitle: 'Radio Buttons',
           listItems: [
-            {labelText: "Мужчина", addAttributes: {checked: true}},
-            {labelText: "Женщина"}
+            {labelText: 'Мужчина', addAttributes: {checked: true}},
+            {labelText: 'Женщина'}
           ]
         })
 
       .form-elements__toggle-group
         h3.form-elements__title Toggle
         .form-elements__toggle
-          +input-toggle({labelText: "Получать спецпредложения"})(checked)
+          +input-toggle({labelText: 'Получать спецпредложения'})(checked)
         .form-elements__toggle
-          +input-toggle({labelText: "Получать спецпредложения"})
+          +input-toggle({labelText: 'Получать спецпредложения'})
 
       .form-elements__item
         h3.form-elements__title Like Button
@@ -92,8 +92,8 @@ block content
     .form-elements__column
       .form-elements__slider
         +slider-range({
-          labelText: "Range Slider",
-          inpName: "price-range",
+          labelText: 'Range Slider',
+          inpName: 'price-range',
           minValue: 600,
           maxValue: 15200,
           startAt: 5000,
@@ -103,43 +103,43 @@ block content
       .form-elements__item
         h3.form-elements__title Buttons
         .form-elements__button.form-elements__button_small
-          +button({btnText: "Click me"})
+          +button({btnText: 'Click me'})
         .form-elements__button.form-elements__button_small
-          +button({btnText: "Click me", btnStyle: "ghost"})
+          +button({btnText: 'Click me', btnStyle: 'ghost'})
         .form-elements__button.form-elements__button_inline
-          +button({btnText: "Click me", btnStyle: "as-text"})
+          +button({btnText: 'Click me', btnStyle: 'as-text'})
         .form-elements__button.form-elements__button_inline
-          +button({btnText: "Click me", btnStyle: "as-text as-text_faint"})
+          +button({btnText: 'Click me', btnStyle: 'as-text as-text_faint'})
         .form-elements__button
-          +button({btnText: "Перейти к оплате", withArrow: true})
+          +button({btnText: 'Перейти к оплате', withArrow: true})
 
       .form-elements__item
         h3.form-elements__title Pagination
         .form-elements__pagination
-          +pagination({itemsNumber: 180, itemsPerPage: 12, baseHref: "#mock-address", addDescription: "вариантов аренды"})
+          +pagination({itemsNumber: 180, itemsPerPage: 12, baseHref: '#mock-address', addDescription: 'вариантов аренды'})
 
     .form-elements__column
       .form-elements__item
         .form-elements__text-field
           +dropdown-list({
-            labelText: "Dropdown",
-            inpPlaceholder: "Какие удобства",
-            inpName: "features",
+            labelText: 'Dropdown',
+            inpPlaceholder: 'Какие удобства',
+            inpName: 'features',
             listItems: [
-              {title: "спальни", names: ["спальня", "спальни", "спален"], value: 2, minValue: 0, maxValue: 3},
-              {title: "кровати", names: ["кровать", "кровати", "кроватей"], value: 2, minValue: 0, maxValue: 6},
-              {title: "ванные комнаты", names: ["ванная комната", "ванные комнаты", "ванных комнат"], value: 0, minValue: 0, maxValue: 2}
+              {title: 'спальни', names: ['спальня', 'спальни', 'спален'], value: 2, minValue: 0, maxValue: 3},
+              {title: 'кровати', names: ['кровать', 'кровати', 'кроватей'], value: 2, minValue: 0, maxValue: 6},
+              {title: 'ванные комнаты', names: ['ванная комната', 'ванные комнаты', 'ванных комнат'], value: 0, minValue: 0, maxValue: 2}
             ]
           })
         .form-elements__text-field
           +dropdown-list({
-            labelText: "Dropdown",
-            inpPlaceholder: "Какие удобства",
-            inpName: "features",
+            labelText: 'Dropdown',
+            inpPlaceholder: 'Какие удобства',
+            inpName: 'features',
             listItems: [
-              {title: "спальни", names: ["спальня", "спальни", "спален"], value: 2, minValue: 0, maxValue: 3},
-              {title: "кровати", names: ["кровать", "кровати", "кроватей"], value: 2, minValue: 0, maxValue: 6},
-              {title: "ванные комнаты", names: ["ванная комната", "ванные комнаты", "ванных комнат"], value: 0, minValue: 0, maxValue: 2}
+              {title: 'спальни', names: ['спальня', 'спальни', 'спален'], value: 2, minValue: 0, maxValue: 3},
+              {title: 'кровати', names: ['кровать', 'кровати', 'кроватей'], value: 2, minValue: 0, maxValue: 6},
+              {title: 'ванные комнаты', names: ['ванная комната', 'ванные комнаты', 'ванных комнат'], value: 0, minValue: 0, maxValue: 2}
             ],
             active: true
           })
@@ -148,13 +148,13 @@ block content
       .form-elements__item
         +dropdown-list({
           withButtons: true,
-          labelText: "Dropdown",
-          inpPlaceholder: "Сколько гостей",
-          inpName: "guests",
+          labelText: 'Dropdown',
+          inpPlaceholder: 'Сколько гостей',
+          inpName: 'guests',
           listItems: [
-            {combined: true, title: "взрослые", names: ["гость", "гостя", "гостей"], value: 0, minValue: 0, maxValue: 10},
-            {combined: true, title: "дети", names: ["гость", "гостя", "гостей"], value: 0, minValue: 0, maxValue: 10},
-            {title: "младенцы", names: ["младенец", "младенца", "младенцев"], value: 0, minValue: 0, maxValue: 10}
+            {combined: true, title: 'взрослые', names: ['гость', 'гостя', 'гостей'], value: 0, minValue: 0, maxValue: 10},
+            {combined: true, title: 'дети', names: ['гость', 'гостя', 'гостей'], value: 0, minValue: 0, maxValue: 10},
+            {title: 'младенцы', names: ['младенец', 'младенца', 'младенцев'], value: 0, minValue: 0, maxValue: 10}
           ],
           active: true
         })
@@ -163,13 +163,13 @@ block content
       .form-elements__item
         +dropdown-list({
           withButtons: true,
-          labelText: "Dropdown",
-          inpPlaceholder: "Сколько гостей",
-          inpName: "guests",
+          labelText: 'Dropdown',
+          inpPlaceholder: 'Сколько гостей',
+          inpName: 'guests',
           listItems: [
-            {combined: true, title: "взрослые", names: ["гость", "гостя", "гостей"], value: 2, minValue: 0, maxValue: 10},
-            {combined: true, title: "дети", names: ["гость", "гостя", "гостей"], value: 1, minValue: 0, maxValue: 10},
-            {title: "младенцы", names: ["младенец", "младенца", "младенцев"], value: 0, minValue: 0, maxValue: 10}
+            {combined: true, title: 'взрослые', names: ['гость', 'гостя', 'гостей'], value: 2, minValue: 0, maxValue: 10},
+            {combined: true, title: 'дети', names: ['гость', 'гостя', 'гостей'], value: 1, minValue: 0, maxValue: 10},
+            {title: 'младенцы', names: ['младенец', 'младенца', 'младенцев'], value: 0, minValue: 0, maxValue: 10}
           ],
           active: true
         })
@@ -178,26 +178,26 @@ block content
       .form-elements__checkbox-list.form-elements__checkbox-list_wide
         +list-checkbox({
           expandable: true,
-          listTitle: "Expandable Checkbox List",
+          listTitle: 'Expandable Checkbox List',
           listItems: [
-            {labelText: "Завтрак"},
-            {labelText: "Письменный стол", addAttributes: {checked: true}},
-            {labelText: "Стул для кормления", addAttributes: {checked: true}},
-            {labelText: "Кроватка", addAttributes: {checked: true}},
+            {labelText: 'Завтрак'},
+            {labelText: 'Письменный стол', addAttributes: {checked: true}},
+            {labelText: 'Стул для кормления', addAttributes: {checked: true}},
+            {labelText: 'Кроватка', addAttributes: {checked: true}},
           ]
         })
         +list-checkbox({
           expandable: true,
-          listTitle: "Expandable Checkbox List",
+          listTitle: 'Expandable Checkbox List',
           listItems: [
-            {labelText: "Завтрак"},
-            {labelText: "Письменный стол", addAttributes: {checked: true}},
-            {labelText: "Стул для кормления", addAttributes: {checked: true}},
-            {labelText: "Кроватка", addAttributes: {checked: true}},
-            {labelText: "Телевизор"},
-            {labelText: "Шампунь"},
-            {labelText: "Телевизор"},
-            {labelText: "Шампунь"}
+            {labelText: 'Завтрак'},
+            {labelText: 'Письменный стол', addAttributes: {checked: true}},
+            {labelText: 'Стул для кормления', addAttributes: {checked: true}},
+            {labelText: 'Кроватка', addAttributes: {checked: true}},
+            {labelText: 'Телевизор'},
+            {labelText: 'Шампунь'},
+            {labelText: 'Телевизор'},
+            {labelText: 'Шампунь'}
           ],
           active: true
         })
@@ -205,17 +205,17 @@ block content
     .form-elements__column.form-elements__column_shifted-right.form-elements__column_shifted-down
       .form-elements__checkbox-list.form-elements__checkbox-list_wide
         +list-checkbox({
-          listTitle: "Rich Checkbox Buttons",
+          listTitle: 'Rich Checkbox Buttons',
           listItems: [
             {
-              inpStyle: "rich",
-              labelText: "Широкий коридор",
-              labelDescription: "Ширина коридоров в номере не менее 91 см."
+              inpStyle: 'rich',
+              labelText: 'Широкий коридор',
+              labelDescription: 'Ширина коридоров в номере не менее 91 см.'
             },
             {
-              inpStyle: "rich",
-              labelText: "Помощник для инвалидов",
-              labelDescription: "На 1 этаже вас встретит специалист  и проводит до номера."
+              inpStyle: 'rich',
+              labelText: 'Помощник для инвалидов',
+              labelDescription: 'На 1 этаже вас встретит специалист  и проводит до номера.'
             }
           ]
         })
@@ -225,9 +225,9 @@ block content
         h3.form-elements__title Bullet List
         +list-bullet({
           listItems: [
-            "Нельзя с питомцами",
-            "Без вечеринок и мероприятий",
-            "Время прибытия — после 13:00, а выезд до 12:00"
+            'Нельзя с питомцами',
+            'Без вечеринок и мероприятий',
+            'Время прибытия — после 13:00, а выезд до 12:00'
           ]
         })
 
@@ -235,18 +235,18 @@ block content
       .form-elements__item
         +list-feature({
           listItems: [
-            {text: "Комфорт", description: "Шумопоглощающие стены"},
-            {text: "Удобство", description: "Окно в каждой из спален"}
+            {text: 'Комфорт', description: 'Шумопоглощающие стены'},
+            {text: 'Удобство', description: 'Окно в каждой из спален'}
           ]
         })
 
     .form-elements__column.form-elements__column_shifted-right.form-elements__column_wide
       .form-elements__comment
         +comment({
-          userName: "Мурад сарафанов",
-          userPicture: "comment__picture_male-1.png",
-          date: "5 дней назад",
+          userName: 'Мурад сарафанов',
+          userPicture: 'comment__picture_male-1.png',
+          date: '5 дней назад',
           likeCount: 12,
           likeActive: true,
-          text: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."
+          text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'
         })
