--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -1,21 +1,6 @@
 block variables
 
 block mixins
-  include ../../blocks/input-field/input-field.pug
-  include ../../blocks/input-toggle/input-toggle.pug
-  include ../../blocks/subscription/subscription.pug
-  include ../../blocks/button/button.pug
-  include ../../blocks/button-like/button-like.pug
-  include ../../blocks/rating/rating.pug
-  include ../../blocks/comment/comment.pug
-  include ../../blocks/list-bullet/list-bullet.pug
-  include ../../blocks/list-feature/list-feature.pug
-  include ../../blocks/list-checkbox/list-checkbox.pug
-  include ../../blocks/list-radio/list-radio.pug
-  include ../../blocks/pagination/pagination.pug
-  include ../../blocks/dropdown-list/dropdown-list.pug
-  include ../../blocks/dropdown-date/dropdown-date.pug
-  include ../../blocks/slider-range/slider-range.pug
 
 doctype html
 html(lang="en")
@@ -24,6 +9,9 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    link(rel="stylesheet", href="../../../node_modules/material-icons/iconfont/material-icons.css")
+    link(rel="stylesheet", href="../../../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css")
+    link(rel="stylesheet", href="../../../node_modules/@fortawesome/fontawesome-free/css/brands.css")
     link(rel="stylesheet", href="../../styles/style.scss")
     title #{pageTitle}
 
