--- a/source/blocks/button/button.scss
+++ b/source/blocks/button/button.scss
@@ -8,9 +8,7 @@
   height: 100%;
   max-width: 32rem;
   max-height: 4.4rem;
-  min-width: 8.7rem;
-  min-height: 3.4rem;
-  padding: 0 1.6rem;
+  padding: 0.9rem 1.8rem;
   background: $color-grad_prim;
   background-origin: border-box;
   border: solid 0.2rem transparent;
