--- a/source/blocks/header/header.scss
+++ b/source/blocks/header/header.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 116rem;
+    max-width: $width-container_main;
     margin: auto;
   }
 
