--- a/source/styles/_variables.scss
+++ b/source/styles/_variables.scss
@@ -8,6 +8,8 @@ $font-size_h2: 1.9rem;
 $font-size_h3: 1.2rem;
 $font-size_body: 1.4rem;
 
+$width-container_main: 116rem;
+
 $breakpoint_laptop: 'screen and (max-width: 1024px)';
 $breakpoint_tablet: 'screen and (max-width: 768px)';
 $breakpoint_mobile-l: 'screen and (max-width: 425px)';
