--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -9,7 +9,7 @@
 @import '../pages/ui-kit/cards';
 @import '../pages/ui-kit/headers-footers';
 
-@import '../pages/website/index';
+@import '../pages/website/landing-page';
 @import '../pages/website/search-room';
 
 @import '../blocks/input-field/input-field';
