--- a/source/pages/website/_layout.pug
+++ b/source/pages/website/_layout.pug
@@ -1,26 +1,78 @@
 block variables
 
 block mixins
-  include ../../blocks/input-field/input-field.pug
-  include ../../blocks/input-checkbox/input-checkbox.pug
-  include ../../blocks/input-radio/input-radio.pug
-  include ../../blocks/input-toggle/input-toggle.pug
-  include ../../blocks/button/button.pug
-  include ../../blocks/button-like/button-like.pug
+  include ../../blocks/header/header.pug
+  include ../../blocks/footer/footer.pug
 
 doctype html
-html(lang="en")
+html(lang="ru")
 
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    link(rel="stylesheet", href="../../../node_modules/material-icons/iconfont/material-icons.css")
+    link(rel="stylesheet", href="../../../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css")
+    link(rel="stylesheet", href="../../../node_modules/@fortawesome/fontawesome-free/css/brands.css")
     link(rel="stylesheet", href="../../styles/style.scss")
     title #{pageTitle}
 
   body
 
+    block header
+      +header({
+        navbarList: [
+          { text: 'О нас', href: '#mock-address' },
+          { text: 'Услуги', dropdownList: [
+            { text: 'Услуга 1', href: '#mock-address' },
+            { text: 'Услуга 2', href: '#mock-address' },
+            { text: 'Услуга 3', href: '#mock-address' }
+          ] },
+          { text: 'Вакансии', href: '#mock-address' },
+          { text: 'Новости', href: '#mock-address' },
+          { text: 'Соглашения', dropdownList: [
+            { text: 'Соглашение 1', href: '#mock-address' },
+            { text: 'Соглашение 2', href: '#mock-address' }
+          ] },
+        ],
+        fstBtn: { text: 'Войти', href: '#mock-address' },
+        sndBtn: { text: 'Зарегистрироваться', href: '#mock-address' },
+      })
+
     block content
+
+    block footer
+      +footer({
+        mainText: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»',
+        navbarItems: [
+          { title: 'Навигация', list: [
+            { text: 'О нас', href: '#mock-address' },
+            { text: 'Новости', href: '#mock-address' },
+            { text: 'Служба поддержки', href: '#mock-address' },
+            { text: 'Услуги', href: '#mock-address' }
+          ] },
+          { title: 'О нас', list: [
+            { text: 'О сервисе', href: '#mock-address' },
+            { text: 'Наша команда', href: '#mock-address' },
+            { text: 'Вакансии', href: '#mock-address' },
+            { text: 'Инвесторы', href: '#mock-address' }
+          ] },
+          { title: 'Служба поддержки', list: [
+            { text: 'Соглашения', href: '#mock-address' },
+            { text: 'Сообщества', href: '#mock-address' },
+            { text: 'Связь с нами', href: '#mock-address' }
+          ] },
+        ],
+        subscription: {
+          title: 'Подписка',
+          text: 'Получайте специальные предложения и новости сервиса',
+          href: '#mock-address',
+        },
+        copyrightText: 'Toxin отель. Все права защищены.',
+        twitterHref: '#mock-address',
+        facebookHref: '#mock-address',
+        instagramHref: '#mock-address',
+      })
 
     block scripts
       script(src="../../scripts/main.js")
